feat: Add profile retrieval by ID and update CommunityProfileDTO structure